// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<div
  className="root "
>
  <p>
    Paper content
  </p>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root rootRaised"
  id="custom-id"
>
  <p>
    Paper content
  </p>
</div>
`;
